--- a/src/Arcanum.UI/NUI/EmbeddedView.xaml
+++ b/src/Arcanum.UI/NUI/EmbeddedView.xaml
@@ -1,15 +1,12 @@
-﻿<UserControl x:Class = "Arcanum.UI.NUI.Nui2.EmbeddedView"
+﻿<UserControl x:Class = "Arcanum.UI.NUI.EmbeddedView"
              xmlns = "http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc = "http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d = "http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local = "clr-namespace:Arcanum.UI.NUI.Nui2"
              xmlns:styleClasses = "clr-namespace:Arcanum.UI.Components.StyleClasses"
              xmlns:converters = "clr-namespace:Arcanum.UI.Components.Converters"
-             mc:Ignorable = "d"
-             d:DesignHeight = "300"
-             d:DesignWidth = "300"
-             d:DataContext = "{d:DesignInstance local:EmbeddedView}">
+             xmlns:nui = "clr-namespace:Arcanum.UI.NUI" mc:Ignorable = "d" d:DesignHeight = "300" d:DesignWidth = "300"
+             d:DataContext = "{d:DesignInstance nui:EmbeddedView}">
 
     <UserControl.Resources>
         <ResourceDictionary>
@@ -34,71 +31,43 @@
             <ColumnDefinition Width = "*" />
         </Grid.ColumnDefinitions>
 
-        <DockPanel x:Name = "TitleDockPanel"
-                   Grid.Row = "0"
-                   Grid.Column = "0"
-                   LastChildFill = "False"
+        <DockPanel x:Name = "TitleDockPanel" Grid.Row = "0" Grid.Column = "0" LastChildFill = "False"
                    Margin = "0, 0, 0, -2">
         </DockPanel>
 
-        <DockPanel x:Name = "SelectorDockPanel"
-                   Grid.Column = "1"
-                   Grid.Row = "0"
-                   LastChildFill = "True"
+        <DockPanel x:Name = "SelectorDockPanel" Grid.Column = "1" Grid.Row = "0" LastChildFill = "True"
                    Margin = "1, 0, 3, -2">
-            <styleClasses:BaseButton x:Name = "ExpandButton"
-                                     Width = "20"
-                                     Height = "20"
-                                     Margin = "4, 0, 2, 0"
-                                     Padding = "0"
-                                     BorderThickness = "1"
-                                     VerticalAlignment = "Center"
-                                     DockPanel.Dock = "Right"
-                                     Click = "ExpandButton_Click">
-                <Path Data = "M0,0 L0,2 L4,6 L8,2 L8,0 L4,4 z"
-                      Fill = "{StaticResource DefaultForeColorBrush}"
-                      Stretch = "None"
-                      HorizontalAlignment = "Center"
-                      VerticalAlignment = "Center">
+            <styleClasses:BaseButton x:Name = "ExpandButton" Width = "20" Height = "20" Margin = "4, 0, 2, 0"
+                                     Padding = "0" BorderThickness = "1" VerticalAlignment = "Center"
+                                     DockPanel.Dock = "Right" Click = "ExpandButton_Click">
+                <Path Data = "M0,0 L0,2 L4,6 L8,2 L8,0 L4,4 z" Fill = "{StaticResource DefaultForeColorBrush}"
+                      Stretch = "None" HorizontalAlignment = "Center" VerticalAlignment = "Center">
                     <Path.LayoutTransform>
                         <!-- ReSharper disable once Xaml.BindingWithContextNotResolved -->
                         <RotateTransform
                             Angle = "{Binding IsExpanded, Converter={StaticResource BoolToAngleConverter}}"
-                            CenterX = "4"
-                            CenterY = "3" />
+                            CenterX = "4" CenterY = "3" />
                     </Path.LayoutTransform>
                 </Path>
             </styleClasses:BaseButton>
 
-            <styleClasses:BaseButton x:Name = "SetEmptyButton"
-                                     Width = "20"
-                                     Height = "20"
-                                     ToolTip = "Set the value to empty"
-                                     BorderThickness = "1"
-                                     Margin = "1, 1, 4, 1"
+            <styleClasses:BaseButton x:Name = "SetEmptyButton" Width = "20" Height = "20"
+                                     ToolTip = "Set the value to empty" BorderThickness = "1" Margin = "1, 1, 4, 1"
                                      Background = "{StaticResource DefaultBackColorBrush}"
                                      Click = "SetEmptyButton_Click">
-                <Image Source = "/Arcanum_UI;component/Assets/Icons/20x20/Close20x20.png"
-                       Stretch = "UniformToFill">
+                <Image Source = "/Arcanum_UI;component/Assets/Icons/20x20/Close20x20.png" Stretch = "UniformToFill">
                 </Image>
             </styleClasses:BaseButton>
         </DockPanel>
 
         <!-- ReSharper disable twice Xaml.BindingWithContextNotResolved -->
-        <ContentPresenter Grid.Row = "1"
-                          Grid.Column = "0"
-                          Grid.ColumnSpan = "2"
+        <ContentPresenter Grid.Row = "1" Grid.Column = "0" Grid.ColumnSpan = "2"
                           Content = "{Binding ExpandableContentGrid}"
                           Visibility = "{Binding IsExpanded, Converter={StaticResource BoolToVis}}"
                           Margin = "0, 0, 3, 2" />
 
-        <Border Grid.Column = "0"
-                Grid.Row = "0"
-                Grid.ColumnSpan = "2"
-                Grid.RowSpan = "2"
-                BorderBrush = "{StaticResource EmbeddedBorderColorBrush}"
-                BorderThickness = "1"
-                CornerRadius = "4"
+        <Border Grid.Column = "0" Grid.Row = "0" Grid.ColumnSpan = "2" Grid.RowSpan = "2"
+                BorderBrush = "{StaticResource EmbeddedBorderColorBrush}" BorderThickness = "1" CornerRadius = "4"
                 Margin = "0, 2, 0, 0">
         </Border>
     </Grid>
