--- a/src/Arcanum.UI/SpecializedEditors/EditorControls/LocationCollectionEditor.xaml
+++ b/src/Arcanum.UI/SpecializedEditors/EditorControls/LocationCollectionEditor.xaml
@@ -38,11 +38,11 @@
         </DockPanel>
         <Rectangle Grid.Row = "1" Height = "2" Margin = "2" Fill = "{StaticResource DefaultBorderColorBrush}" />
         <DockPanel Grid.Row = "2" LastChildFill = "True">
-            <styleClasses:BaseButton DockPanel.Dock = "Right" Width = "21" Height = "21" Margin = "2,0">
+            <styleClasses:BaseButton DockPanel.Dock = "Right" Width = "21" Height = "21" Margin = "2,0" Click="Add_OnClick">
                 <Image Source = "/Arcanum_UI;component/Assets/Icons/20x20/Add20x20.png" />
             </styleClasses:BaseButton>
 
-            <styleClasses:BaseButton DockPanel.Dock = "Right" Width = "21" Height = "21" Margin = "2,0">
+            <styleClasses:BaseButton DockPanel.Dock = "Right" Width = "21" Height = "21" Margin = "2,0" Click="Remove_OnClick">
                 <Image Source = "/Arcanum_UI;component/Assets/Icons/20x20/Minimize20x20.png" />
             </styleClasses:BaseButton>
 
