--- a/src/Arcanum.UI/Components/Styles/Base/BaseToolTip.xaml
+++ b/src/Arcanum.UI/Components/Styles/Base/BaseToolTip.xaml
@@ -7,37 +7,23 @@
     </ResourceDictionary.MergedDictionaries>
 
     <Style TargetType = "ToolTip">
-        <Setter Property = "TextBlock.TextAlignment"
-                Value = "Left" />
-        <Setter Property = "Background"
-                Value = "{StaticResource DefaultBackColorBrush}" />
-        <Setter Property = "Foreground"
-                Value = "{StaticResource DefaultForeColorBrush}" />
-        <Setter Property = "FontSize"
-                Value = "12" />
-        <Setter Property = "Padding"
-                Value = "5" />
-        <Setter Property = "BorderBrush"
-                Value = "{StaticResource DefaultBorderColorBrush}" />
-        <Setter Property = "BorderThickness"
-                Value = "2" />
-        <Setter Property = "Placement"
-                Value = "Mouse" />
-        <Setter Property = "HasDropShadow"
-                Value = "True" />
-        <Setter Property = "OverridesDefaultStyle"
-                Value = "True" />
+        <Setter Property = "TextBlock.TextAlignment" Value = "Left" />
+        <Setter Property = "Background" Value = "{StaticResource DefaultBackColorBrush}" />
+        <Setter Property = "Foreground" Value = "{StaticResource DefaultForeColorBrush}" />
+        <Setter Property = "FontSize" Value = "12" />
+        <Setter Property = "Padding" Value = "5" />
+        <Setter Property = "BorderBrush" Value = "{StaticResource DefaultBorderColorBrush}" />
+        <Setter Property = "BorderThickness" Value = "2" />
+        <Setter Property = "Placement" Value = "Mouse" />
+        <Setter Property = "HasDropShadow" Value = "True" />
+        <Setter Property = "OverridesDefaultStyle" Value = "True" />
         <Setter Property = "Template">
             <Setter.Value>
                 <ControlTemplate TargetType = "ToolTip">
-                    <Border Background = "{TemplateBinding Background}"
-                            BorderBrush = "{TemplateBinding BorderBrush}"
-                            BorderThickness = "{TemplateBinding BorderThickness}"
-                            CornerRadius = "3"
-                            SnapsToDevicePixels = "True"
-                            Effect = "{DynamicResource TooltipDropShadow}">
-                        <ContentPresenter Margin = "{TemplateBinding Padding}"
-                                          RecognizesAccessKey = "True"
+                    <Border Background = "{TemplateBinding Background}" BorderBrush = "{TemplateBinding BorderBrush}"
+                            BorderThickness = "{TemplateBinding BorderThickness}" CornerRadius = "3"
+                            SnapsToDevicePixels = "True">
+                        <ContentPresenter Margin = "{TemplateBinding Padding}" RecognizesAccessKey = "True"
                                           SnapsToDevicePixels = "True" />
 
                     </Border>
