--- a/src/Arcanum.UI/Components/Views/MainMenuScreen/HomeViewModel.xaml
+++ b/src/Arcanum.UI/Components/Views/MainMenuScreen/HomeViewModel.xaml
@@ -122,18 +122,18 @@
                                Style = "{StaticResource TitleText}"
                                HorizontalAlignment = "Center"
                                Margin = "10,20,10,0" />
-                    <TextBlock Text = "Arcanum Ordo"
+                    <TextBlock Text = "Arcanum Aer"
                                Foreground = "{StaticResource AccentBackColorBrush}"
                                TextAlignment = "Center"
                                FontSize = "20"
-                               Margin = "20,20,20,0" />
-                    <TextBlock Text = "Version 1.1.0.0-beta"
+                               Margin = "20,18,20,0" />
+                    <TextBlock Text = "Version 1.0.0 - PreRelease"
                                Foreground = "LightGray"
                                TextAlignment = "Center"
                                FontSize = "12"
                                Margin = "20,5,20,20" />
-                    <TextBlock Text = "Update Now!"
-                               Foreground = "White"
+                    <TextBlock Text = "Up to date"
+                               Foreground = "LightGray"
                                TextWrapping = "WrapWithOverflow"
                                FontSize = "26"
                                HorizontalAlignment = "Center"
