Fixed Error log not writing when using the button for it with the LMB

--- a/src/Arcanum.UI/Components/Windows/MinorWindows/ErrorLog.xaml
+++ b/src/Arcanum.UI/Components/Windows/MinorWindows/ErrorLog.xaml
@@ -106,11 +106,8 @@
                 <DataGridTemplateColumn Header = "Severity" Width = "50" CanUserReorder = "True" CanUserResize = "True">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate DataType = "{x:Type dig:Diagnostic}">
-                            <Border CornerRadius="4" 
-                                    HorizontalAlignment="Center" 
-                                    Margin="1,1"
-                                    UseLayoutRounding="True"
-                                    SnapsToDevicePixels="True">
+                            <Border CornerRadius = "4" HorizontalAlignment = "Center" Margin = "1,1"
+                                    UseLayoutRounding = "True" SnapsToDevicePixels = "True">
                                 <Border.Style>
                                     <Style TargetType = "Border">
                                         <Setter Property = "Background" Value = "Transparent" />
@@ -132,7 +129,7 @@
                                 </Border.Style>
 
                                 <Image Width = "16" Height = "16" VerticalAlignment = "Center"
-                                       HorizontalAlignment = "Center" Stretch="None">
+                                       HorizontalAlignment = "Center" Stretch = "None">
                                     <Image.Style>
                                         <Style TargetType = "Image">
                                             <Setter Property = "Source"
@@ -302,6 +299,7 @@
                     </styleClasses:CorneredTextBox>
 
                     <styleClasses:BaseButton Grid.Column = "1" MouseUp = "ExportToCsv_OnClick"
+                                             Click = "ExportToCsv_LeftOnClick"
                                              ToolTip = "Export the error log to a .csv file&#10;RMB to export and open the file"
                                              Margin = "2, 0" BorderBrush = "{StaticResource DefaultBackColorBrush}">
                         <Image Source = "/Arcanum_UI;component/Assets/Icons/20x20/ExportAsCsv20x20.png" Width = "20"
