Fixed all errors being supressed by default.

--- a/src/Arcanum.UI/Components/Windows/DebugWindows/DebugPanel/DebugPanelGrid.xaml
+++ b/src/Arcanum.UI/Components/Windows/DebugWindows/DebugPanel/DebugPanelGrid.xaml
@@ -63,6 +63,9 @@
 
             <styleClasses:BaseButton Content = "Saving Splash Intermediate" Margin = "2" Padding = "4"
                                      Click = "SplashIntermediateButton_Click" />
+
+            <styleClasses:BaseButton Content = "Experimental Rename" Margin = "2" Padding = "4"
+                                     Click = "ExperimentalRenameButton_Click" />
         </StackPanel>
 
         <ContentPresenter Grid.Column = "1" x:Name = "DebugView">
