Minor changes to naming in InlinedPropertyGrids

--- a/src/Arcanum.UI/Components/Windows/PopUp/PropertyGridWindow.xaml
+++ b/src/Arcanum.UI/Components/Windows/PopUp/PropertyGridWindow.xaml
@@ -5,13 +5,8 @@
                          xmlns:d = "http://schemas.microsoft.com/expression/blend/2008"
                          xmlns:styleClasses = "clr-namespace:Arcanum.UI.Components.StyleClasses"
                          xmlns:baseControls = "clr-namespace:Arcanum.UI.Components.UserControls.BaseControls"
-                         mc:Ignorable = "d"
-                         Title = "PropertyGridWindow"
-                         Height = "450"
-                         Width = "500"
-                         Background = "{StaticResource DefaultBackColorBrush}"
-                         BorderThickness = "0"
-                         FooterHeight = "4"
+                         mc:Ignorable = "d" Title = "PropertyGridWindow" Height = "450" Width = "500"
+                         Background = "{StaticResource DefaultBackColorBrush}" BorderThickness = "0" FooterHeight = "4"
                          WindowStartupLocation = "CenterScreen">
 
     <styleClasses:BaseWindow.Resources>
@@ -24,10 +19,8 @@
     </styleClasses:BaseWindow.Resources>
 
 
-    <baseControls:PropertyGrid Margin = "2"
-                               Background = "{StaticResource DefaultBackColorBrush}"
-                               BorderThickness = "0"
-                               BorderBrush = "{StaticResource DefaultBorderColorBrush}"
+    <baseControls:PropertyGrid x:Name = "MainGrid" Margin = "2" Background = "{StaticResource DefaultBackColorBrush}"
+                               BorderThickness = "0" BorderBrush = "{StaticResource DefaultBorderColorBrush}"
                                SelectedObject = "{Binding SelectedObject, RelativeSource={RelativeSource AncestorType=Window}}">
     </baseControls:PropertyGrid>
 </styleClasses:BaseWindow>
